--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "broccoli": "^1.1.1",
+    "broccoli-browser-sync": "^1.0.2",
+    "broccoli-cli": "^1.0.0",
+    "broccoli-funnel": "^1.2.0",
+    "broccoli-merge-trees": "^2.0.0",
+    "broccoli-rollup": "^1.3.0",
+    "broccoli-typescript-compiler": "^1.0.1",
     "rollup": "^0.41.6",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "typescript": "^2.3.2"
   },
   "scripts": {
-    "build": "./node_modules/.bin/tsc --pretty && ./node_modules/.bin/rollup -c"
+    "start": "./node_modules/.bin/broccoli serve",
+    "build": "rm -rf dist && ./node_modules/.bin/broccoli build dist >/dev/null"
   }
 }
