--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,11 @@
 {
     "compilerOptions": {
         "strict": true,
-        "target": "ES3",
         "module": "es2015",
-        "strictNullChecks": true,
-        "noImplicitAny": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "pretty": true
     },
     "include": [
         "src/**/*.ts"
-    ],
-    "exclude": [
     ]
 }
