--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "broccoli-merge-trees": "^2.0.0",
     "broccoli-rollup": "^1.3.0",
     "broccoli-typescript-compiler": "^1.0.1",
+    "broccoli-uglify-sourcemap": "^1.5.2",
     "rollup": "^0.41.6",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "typescript": "^2.3.2"
