--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "typescript": "^2.3.2"
   },
   "scripts": {
-    "start": "./node_modules/.bin/broccoli serve",
-    "build": "rm -rf dist && ./node_modules/.bin/broccoli build dist >/dev/null"
+    "start": "ENVIRONMENT=development ./node_modules/.bin/broccoli serve",
+    "build": "rm -rf dist && ENVIRONMENT=production ./node_modules/.bin/broccoli build dist"
   }
 }
