Sync tsconfig.json (for tools) with build config (for Broccoli)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
     "compilerOptions": {
-        "strict": true,
+        "target": "ES3",
         "module": "es2015",
+        "strict": true,
         "sourceMap": true,
-        "pretty": true
+        "pretty": true,
     },
     "include": [
         "src/**/*.ts"
